﻿2020-09
-------
CHANGE:     TVectorSorted to vector_sorted and update implementation to be STL like.

2020-05
------
DEPRECATED: PPackage
DEPRECATED: CSortablePackage
DEPRECATED: PSortablePackage
DEPRECATED: CContainer
DEPRECATED: CUnsortedContainer
DEPRECATED: CSortedContainer
DEPRECATED: CIterator

2020-04
-------
REMOVE:     binaryTree
REMOVE:     AVL tree
ADD:        hierarchy::setRootValue()
CHANGE:     hierarchy to use a rootValue_ variable. and change template definition to remove null value.

2020-02
-------
ADD:        index2D class and associated header file.
REVERTED:   vector2D. Implemented as a lookup table approach.